fix overflow quand trop de contacts

--- a/artsync/src/main/resources/static/css/chat.css
+++ b/artsync/src/main/resources/static/css/chat.css
@@ -152,7 +152,7 @@ ul {
 /*======= Container pour le main content(chate et liste contact) ======*/
 .main-content{
     grid-area: main;
-    height: 100%;
+    height: 90vh;
     width: 100%;
     overflow-y: hidden;
     margin-left: auto;
